--- a/style.css
+++ b/style.css
@@ -15,5 +15,8 @@ p{
 div{
     width: 40%;
    background-color: rgb(0, 207, 59);
-    margin: auto;
+    
 }
+.content-container {
+    margin: auto;
+    }
