--- a/style.css
+++ b/style.css
@@ -10,9 +10,14 @@ h1{
 
 p{
     color: rgb(41, 32, 32);
+
 }
 
-div{
-    width: 20%;
+.advert{
+    width: auto;
    background-color: rgb(0, 207, 59);
+    
 }
+.content-container {
+    margin: auto;
+    }
