--- a/style.css
+++ b/style.css
@@ -1,6 +1,7 @@
+
 body{
-    background-color: rgb(205, 235, 242);
-    font-family: Arial, Helvetica, sans-serif;
+    background-image: linear-gradient(to left, blue, rgb(29, 203, 163))
+   
 }
 
 h1{
@@ -9,13 +10,13 @@ h1{
 }
 
 p{
-    color: rgb(41, 32, 32);
+    color: rgb(2, 2, 2);
 
 }
 
 .advert{
     width: auto;
-   background-color: rgb(0, 207, 59);
+   background-color: rgb(26, 193, 202);
     
 }
 .content-container 
